--- a/style.css
+++ b/style.css
@@ -1,90 +1,511 @@
 @import url('https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Archivo+Black&family=Cal+Sans&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&family=Lexend:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Roboto Slab", serif;
+
+
 }
-:root{
-    --lead:#212121;
-    --gold-finger:#f2BD12;
-    --eye-ball:#fffdf7;
-    --hint-yellow:#fcf1cc;
-    --pure-white:#fff;
+
+:root {
+    --lead: #212121;
+    --gold-finger: #f2BD12;
+    --eye-ball: #fffdf7;
+    --hint-yellow: #fcf1cc;
+    --pure-white: #fff;
 }
-body{
+
+body {
     background-color: var(--eye-ball);
 }
+
 /*Basic styling */
-a{
+a {
     font-size: 1.1rem;
     text-decoration: none;
     color: var(--lead);
 }
-.flex{
+
+.flex {
     display: flex;
     align-items: center;
-}
-li{
-    list-style: none;
-}
-.between{
-    justify-content: space-between;
-}
-.gap-2{
-    gap: 2rem;
-}
-.gap-3{
-    gap: 3rem;
-}
-.warpper{
-    max-width: 1400px;
-    margin: auto;
-    padding-inline:1.5rem ;
+
 }
 
+li {
+    list-style: none;
+}
+
+.between {
+    justify-content: space-between;
+}
+
+.gap-2 {
+    gap: 2rem;
+}
+
+.gap-3 {
+    gap: 3rem;
+}
+
+.warpper {
+    max-width: 1400px;
+    margin: auto;
+    padding-inline: 1.5rem;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    margin: auto;
+    display: block;
+}
+
+.p-top {
+    padding: 10rem;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.mt-4 {
+    margin-top: 4rem;
+}
+
+.mt-half {
+    margin-top: .5rem;
+    color: var(--gold-finger);
+}
+
+.m-auto {
+    margin: auto;
+}
+
+.mt-one-half {
+    margin-top: 1.5rem;
+}
+
+
+
+
+
 /*header styling */
-.navbar{
+.navbar {
     min-height: 14vh;
 }
-.logo{
+
+.logo {
     font-size: 2rem;
     font-weight: bold;
     color: var(--gold-finger);
 }
-.btn{
+
+.btn {
     display: inline-block;
     padding: .9rem 2rem;
     background-color: var(--gold-finger);
     border-radius: 1rem;
     font-size: 1.1rem;
     color: #fff;
-    box-shadow: rgba(0 ,0 ,0 ,0.1) 0 2px 1px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 2px 1px;
     transition: .3s ease-in-out;
 }
-.btn:hover{
+
+.btn:hover {
     background: var(--lead);
 }
 
-.cart-icon{
-    color: var(--lead);
+.cart-icon {
     font-size: 1rem;
     position: relative;
 }
-.cart-icon .cart-value{
+
+.cart-icon .cart-value {
     position: absolute;
     top: 50%;
-    right:-10px;
+    right: -10px;
     font-size: .85rem;
     width: 20px;
     aspect-ratio: 1;
     border-radius: 100vw;
-    background-color:var(--gold-finger);
+    background-color: var(--gold-finger);
     color: var(--lead);
     text-align: center;
     line-height: 20px;
+}
 
+.desktop-action .hamburge {
+    font-size: 1.5rem;
+    display: none;
+}
+
+.Mobile-menu {
+    display: none;
+}
+
+/*section styling */
+
+.hero-section {
+    min-height: calc(100vh-14vh);
+}
+
+.content,
+.image-container,
+.service-card {
+    flex: 1;
+    flex-basis: 300px;
+}
+
+h1 {
+    font-size: 5.6vw;
+    color: var(--lead);
+}
+
+h1 span {
+    color: var(--gold-finger);
+}
+
+p {
+    font-size: 1.2rem;
+    color: gray;
+    line-height: 1.8rem;
+    font-weight: 400;
+}
+
+.para {
+    margin-block: 2rem;
+    max-width: 550px;
+
+}
+
+.social-icon {
+    background-color: var(--hint-yellow);
+    width: 3rem;
+    aspect-ratio: 1;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+    text-align: center;
+    line-height: 3rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 2px 1px;
+    transition: .3s ease-in-out;
+}
+
+.social-icon:hover {
+    background-color: var(--lead);
+    color: var(--pure-white);
+}
+
+.nam1 {
+    color: var(--gold-finger);
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.nam2 {
+    color: black;
+    font-size: 3rem;
+    text-align: center;
+}
+
+.image1 {
+    max-width: 100%;
+    height: auto;
+    margin: auto;
+    display: block;
+    padding-top: 5%;
+    display: flex;
+}
+
+.image1 h4 {
+    text-align: center;
+}
+
+/* SECTION NO 1 */
+H5 {
+    font-size: 1.2rem;
+    letter-spacing: .2rem;
+    color: var(--gold-finger);
+    text-transform: uppercase;
+}
+
+h2 {
+    font-size: 3.7rem;
+    text-transform: capitalize;
+    color: var(--lead);
+}
+
+h3 {
+    font-size: 2rem;
+    text-transform: capitalize;
+    color: var(--lead);
+}
+
+.service-card h3 {
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+
+}
+
+/* SECTION 02 */
+
+.order-card {
+    flex: 1;
+    flex-basis: 300px;
+    background-color: var(--pure-white);
+    padding: 0 1rem 2rem 1rem;
+    border: .1rem solid var(--gold-finger);
+    border-radius: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.5) 8px 8px 8px,
+        rgba(0, 0, 0, 0.5) 8px 8px 8px inset;
+}
+
+.order-card img {
+    width: 6;
+    filter: drop-shadow(rgb(0, 0, 0, 0.2) 0 10px 10px);
+}
+
+h4 {
+    font-size: 1.8rem;
+    color: var(--lead);
+}
+
+.order-card .price {
+    font-size: 1.7rem;
+    color: var(--gold-finger);
+    padding: 1.3rem 0 2rem 0;
+}
+
+/* CART TAB STYLING */
+
+.cart-tab {
+    background: var(--hint-yellow);
+    position: fixed;
+    inset: 0 -500 0 auto;
+    width: 25rem;
+    padding-block: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 99;
+    box-shadow:
+     rgb(0, 0, 0, 0.2) -10px -10px 20px;
+}
+.cart-tab-active{
+    inset: 0 0 0 auto;
+}
+.cart-list {
+    flex: 1;
+    width: 100%;
+    margin-top: 1.5rem;
+    overflow: auto;
+
+}
+
+.cart-list::-webkit-scrollbar {
+    width: 0;
+}
+
+.total-container {
+    width: 100%;
+    background: var(--gold-finger);
+    text-align: center;
+    margin-block: 1rem;
+    padding-block: 1rem;
+}
+
+.total-container h4 {
+    display: inline-block;
+    font-size: 1.3rem;
+    font-weight: 400;
+}
+
+.btn-container .btn {
+    background: var(--lead);
+    transition: .3s ease-in-out;
+}
+
+.btn-container .btn:hover {
+    background: var(--gold-finger);
+    color: var(--lead);
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+    padding: .7rem 1rem;
+
+}
+
+.cart-list .item:nth-child(even) {
+    background: var(--eye-ball);
+}
+
+.item .item-image img {
+    width: 5rem;
+}
+
+.item h4 {
+    font-size: 1.2rem;
+    color: var(--lead);
+}
+
+.item .item-total {
+    font-weight: 400;
+    margin-top: .3rem;
+}
+
+.quantity-btn {
+    background: var(--lead);
+    color: var(--pure-white);
+    width: 1.7rem;
+    aspect-ratio: 1;
+    border-radius: 100vw;
+    text-align: center;
+    line-height: 1.7rem;
+
+}
+
+.quantity-value {
+    font-size: 1.2rem;
+    font-weight: 400;
+    margin-inline: .6rem;
+}
+
+
+
+
+
+
+
+
+/* section 3 */
+
+.review-container {
+    width: 650px;
+    max-width: 100%;
+    flex: 1;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.profile {
+    width: 4rem;
+    aspect-ratio: 1;
+    border-radius: 100vw;
+    overflow: hidden;
+}
+
+.profile img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.fa-star {
+    color: var(--gold-finger);
+}
+
+.arrow {
+    width: 2.5rem;
+    aspect-ratio: 1;
+    border-radius: 100vw;
+    background: var(--gold-finger);
+    color: var(--lead);
+    text-align: center;
+    line-height: 2.5rem;
+
+}
+
+/* SECTION 04 */
+
+.app-container {
+    background: var(--hint-yellow);
+    padding: 3rem 6rem;
+    border-radius: 3rem;
+    flex: 1;
+}
+
+.app-container h2 {
+    font-size: 4.5rem;
+}
+
+.app-container .image-container img {
+    width: 25rem;
+}
+
+/* SECTION 5 */
+
+.input-container {
+    width: 43rem;
+    max-width: 100%;
+    background: var(--pure-white);
+    padding: .8rem;
+    box-shadow:
+        rgb(0, 0, 0, 0.1) 0 5px 8px;
+    border-radius: 1rem;
+    margin: 4rem auto 0 auto;
+}
+
+input[type="email"] {
+    flex: 1;
+    height: 7vh;
+    background: transparent;
+    border: none;
+    font-size: 1.1rem;
+    padding-left: 1rem;
+}
+
+input[type="email"]:focus {
+    outline: none;
+}
+
+/*footer styling*/
+.footer-container {
+    margin-top: 10rem;
+    padding-block: 4rem;
+    background: var(--hint-yellow);
+}
+
+.footer-container.flex {
+    align-items: flex-start;
+}
+
+.footer-wrapper {
+    flex: 1;
+    padding: 4rem;
+    flex-basis: 150px;
+}
+
+.footer-wrapper:nth-child(1) {
+    flex: 2;
+    flex-basis: 300px;
+}
+
+.footer-wrapper .social-icon {
+    background: var(--pure-white);
+}
+
+.footer-wrapper .social-icon:hover {
+    background: var(--lead);
+    color: var(--pure-white);
+}
+
+.footer-link {
+    color: gray;
+    font-size: 1.1rem;
+    transition: .3s ease-in-out;
+}
+
+.footer-link:hover {
+    color: var(--lead);
 }
 
 
@@ -95,7 +516,77 @@ li{
 
 
 
-/*section styling */
+/* Media queries*/
 
+@media screen and (max-width:780px) {
 
-/*footer styling*/
+    /* HEADER SECTION */
+    .navlist,
+    .desktop-action .btn {
+        display: none;
+    }
+
+    .desktop-action .hamburge {
+        display: block;
+    }
+
+    .Mobile-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        position: absolute;
+        top: 20%;
+        left: -100%;
+        transform: translateX(-50%);
+        width: 20rem;
+        padding: 2rem;
+        background: var(--pure-white);
+        border: .1rem solid var(--gold-finger);
+        border-radius: 2rem;
+        box-shadow: rgba(20, 20, 20, 0.5) 8px 8px 8px,
+            rgba(17, 17, 17, 0.5) 8px 8px 8px inset;
+        transition: all .5s ease-in-out;
+    }
+
+    .mobile-menu-active {
+        left: 50%;
+        transform: translate(-50%);
+
+        /* SECTIONS STYLING */
+
+        /* HERO STYLING */
+    }
+
+    h1 {
+        font-size: 3.6 rem;
+    }
+
+    .content {
+        padding-top: 3re;
+    }
+
+    .gap- {
+        gap: 1.4rem;
+    }
+
+    .gap-4 {
+        gap: 4rem;
+    }
+
+    /* SECTION 01 */
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    /* SECTION 04*/
+    .app-container {
+        padding: 2.2rem;
+    }
+
+    .app-container .content h2 {
+        font-size: 3.5rem;
+    }
+}
